@@ -92,6 +92,10 @@ Files: hnb.pm
 Copyright: Copyright (C) 2008 Axel Beckert <abe@deuxchevaux.org>
 License: GPL-2+
 
+Files: creole.pm
+Copyright: Copyright (C) 2008 Bernd Zeimetz <bernd@bzed.de>
+License: GPL-2+
+
 Files: doc/logo/*
 Copyright: © 2006 Recai Oktaş <roktas@debian.org>
 License: GPL-2+
