@@ -14,3 +14,5 @@ Syntax file for vim: http://www.peter-hoffmann.com/code/vim/  (Since a typical i
 
 > Should be pretty easy to add a plugin to do it using [[cpan
 > Text::WikiCreole]]. --[[Joey]]
+
+[[done]]
