@@ -15,6 +15,7 @@ ikiwiki (2.51) UNRELEASED; urgency=low
   * Version the suggests of xapian-omega to a version known to be new enough
     to work with ikiwiki. Reportedly, version 0.9.9 is too old to work.
     Closes: #486592
+  * creole: New plugin from Bernd Zeimetz. Closes: #486930
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Jun 2008 15:03:33 -0400
 
